--- a/DataMining/2주차/Logistic Regression (colon data).Rmd
+++ b/DataMining/2주차/Logistic Regression (colon data).Rmd
@@ -355,7 +355,7 @@ confusionMatrix(factor(pred_type_step), factor(data_test$status))
 ```  
 
 임계값을 0.5로 설정하였다.  
-caret의 `confusionMatrix`함수를 이용해 분류의 정확도를 알아보자. train, test를 따로 나누는 과정은 물론 생략하고 진행하는 중이다.  
+caret의 `confusionMatrix`함수를 이용해 분류의 정확도를 알아보자.  
 성능은 `r mean(data_test$status==pred_type_step)`  
 
 ### ROC - stepwise model  
