4~5주차 데마 업뎃

--- a/DataMining/4주차/naive bayes, knn.Rmd
+++ b/DataMining/4주차/naive bayes, knn.Rmd
@@ -309,7 +309,9 @@ boxplot(data[,"Year"])
 ## Split the data(train, test)  
 
 ```{r}
+set.seed(100)
 index <- createDataPartition(Smarket$Direction, p = 0.75, list = F)
+
 train_market <- Smarket[index, ]
 test_market <- Smarket[-index, ]
 ```  
