--- a/Regression Analysis/비선형회귀모형/비선형-회귀모형.md
+++ b/Regression Analysis/비선형회귀모형/비선형-회귀모형.md
@@ -163,7 +163,7 @@ abs(coef(growth.nls)[1]-30)/sqrt(vcov(growth.nls)[1,1]) > qt(0.975,16)
 ```
 
 모수-30을 standard error로 나눠준게 t보다 큰지 확인한다. (자유도는 18에서 모수2개이므로 16이다)
-95% 신뢰구간이 30을 포함하지 않음 -&gt; 귀무가설기각
+95% 신뢰구간이 30을 포함하지 않음 -&gt; 귀무가설 기각
 
 ### 잔차분석
 
@@ -275,7 +275,7 @@ abs(coef(growth.nls2)[1]-30)/sqrt(vcov(growth.nls2)[1,1]) > qt(0.975,16)
 # qt(0.025,16, lower.tail=F)
 ```
 
-beta1이 30인지에 대한 가설은 유의수준 95%에서 기각된다.
+beta1이 30인지에 대한 가설은 유의수준 0.05에서 기각된다.
 
 잔차분석
 --------
