--- a/Regression Analysis/단순 다중회귀/종합.Rmd
+++ b/Regression Analysis/단순 다중회귀/종합.Rmd
@@ -201,7 +201,7 @@ f_adjr_p(model)
 
 F-statistics가 충분히 크고 p-value는 소수점 3자리에서 0.000이다. 따라서 모든 회귀계수가 0이라는 가설을 기각할 수 있다. 즉, 모형은 적절하다고 여겨진다.  
 
-정확한 모형의 p-value는 F통계량을 이용하여 구할 수 있다. 정확한 값은 0.00000000000000004817438이다.  
+정확한 모형의 p-value는 F통계량을 이용하여 구할 수 있다. 정확한 값은 $4.817438\times10^{-17}$이다.  
 
 adjusted r squared는 0.953이다. 결정계수 값은 회귀계수가 늘어날수록 증가하는 추세를 보인다.  따라서 다중회귀에서 수정된 결정계수 값을 보는 것이 더 타당하다. 늘어난 회귀계수가 모형에 영향이 미미할지라도 결정계수는 늘어날 것이기 때문에 이를 보완하여 수정된 결정계수를 고려한다.  
 
