오탈자 수정

--- a/Regression Analysis/단순 다중회귀/종합.Rmd
+++ b/Regression Analysis/단순 다중회귀/종합.Rmd
@@ -170,7 +170,7 @@ Anova_table(model)
 
 적합된 회귀식은 $\hat{y} = -0.164X_0+0.295X_1+0.179X_2-0.398X_3+0.114X_4$ 이다.  
 이 계수로는 어느 변수가 영향을 크게 미치는지 알 수 없으므로 표준화 회귀계수를 살펴보자.  
-표준화 회귀계수단 ㄷ위를 배제시켜 회귀계수의 상대적 중요성을 알 수 있다.  
+표준화 회귀계수 단위를 배제시켜 회귀계수의 상대적 중요성을 알 수 있다.  
 x1 x2 x3 x4순으로 모형에 영향을 미치는 정도가 다름을 알 수 있다.  
 
 여기서 유의한 변수는 x1과 x2이다.  
